src/objects/Maize_GAPs_Knowledge__c.object
<CustomObject>
    <fields>
        <fullName>Bulking_Marketing__c</fullName>
        <label>Bulking Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Bulking and marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Bulk_Marketing__c</fullName>
        <label>Discussed Bulk Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Harvesting_and_PHH__c</fullName>
        <description>NA means Not Applicable</description>
        <label>Discussed Harvesting and PHH</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Land_Preparation__c</fullName>
        <inlineHelpText>NA means Not Applicable</inlineHelpText>
        <label>Discussed Land Preparation</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Pests_and_Diseases__c</fullName>
        <label>Discussed Pests and Diseases</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Proper_Planting__c</fullName>
        <label>Discussed Proper Planting</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Record_Keeping__c</fullName>
        <label>Discussed Record Keeping</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Seed_Selection__c</fullName>
        <label>Discussed Seed Selection</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Soil_Fertility_Management__c</fullName>
        <label>Discussed Soil Fertility Management</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Harvesting_and_PHH__c</fullName>
        <label>Proper Harvesting and PHH</label>
        <picklist>
            <picklistValues>
                <fullName>Harvesting and PHH Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Method of drying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Method of shelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form of value addition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Discussion_Datetime__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Knowledge Discussion Datetime</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maize_Farmer_GAPs_Selection__c</fullName>
        <label>Maize Farmer GAPs Selection</label>
        <referenceTo>Maize_Farmer_GAPs_Selection__c</referenceTo>
        <relationshipLabel>Maize GAPs Knowledge</relationshipLabel>
        <relationshipName>Maize_GAPs_Knowledge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pest_and_disease_identification__c</fullName>
        <label>Proper pest and disease identification</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to detect pest &amp; disease attack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and disease control measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of pesticide application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_Record_Keeping_Topics__c</fullName>
        <label>Proper Record Keeping Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Use records to make informed decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kind of records kept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Method of record storage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_and_timely_land_preparation_Topic__c</fullName>
        <label>Proper and timely land preparation Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Method of land preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of land preparation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_planting_Topics__c</fullName>
        <label>Proper planting Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Time of Planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cropping system (Intercrop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spacing (if inter crop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spacing (if mono crop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spacing measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crops intercropped with maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage when gap filling is done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage of thinning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_seed_selection_Topics__c</fullName>
        <label>Proper seed selection Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Type of maize seed used for planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selection of own saved or local seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selection of type of improved seed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_soil_fertility_management_Topics__c</fullName>
        <label>Proper soil fertility management Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Means of soil fertilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Types of fertilizers used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of fertilizer used per plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode of fertilizer or manure placement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>TaroWorks</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Maize GAPs Knowledge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MGK{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Maize GAPs Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maize GAPs Knowledge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>